--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 
+  <!-- Link Font Awesome -->
+
   <script src="https://kit.fontawesome.com/775891e3f6.js" crossorigin="anonymous"></script>
 
 
@@ -27,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>weBuild</title>
 </head>
 
 <body>
